Fix datepicker style in dark mode

--- a/src/style.less
+++ b/src/style.less
@@ -589,8 +589,12 @@ hr {
             border-top-color: @text-color-dark !important;
         }
 
+        .dayContainer {
+            background-color: @color-primary;
+        }
+
         .flatpickr-day {
-            &:hover {
+            &:not(.disabled):hover {
                 background-color: @color-primary-darker;
                 border-color: @color-primary-darker;
             }
@@ -599,9 +603,20 @@ hr {
                 border-color: @color-primary-darker;
             }
 
+            &.inRange {
+                background-color: @color-primary-darker;
+                border-color: @color-primary-darker;
+                border-top: 1px solid @color-primary-darker;
+                border-bottom: 1px solid @color-primary-darker;
+                box-shadow: -5px 0 0 @color-primary-darker, 5px 0 0 @color-primary-darker;
+            }
+
+            &.startRannge,
+            &.endRange,
             &.selected {
                 background-color: @color-primary-darkest;
                 border-color: @color-primary-darkest;
+                box-shadow: none;
             }
         }
 
